syntax = 'proto3';

package api;

option java_multiple_files = true;
option java_package = "com.ran.kolibri.service.api";

import "idp/sign-in.proto";
import "idp/sign-up.proto";

service KolibriApiService {
    rpc SignUp (idp.SignUpRequest) returns (idp.SignUpResponse);
    rpc SignIn (idp.SignInRequest) returns (idp.SignInResponse);
}
