syntax = "proto3";

package idp;

option java_multiple_files = true;
option java_package = "com.ran.kolibri.model.idp";

message SignInRequest {
    string username = 1;
    string password = 2;
}

message SignInResponse {
    string access_token = 1;
    string refresh_token = 2;
    // todo: return different statuses
}
