syntax = "proto3";

package idp;

option java_multiple_files = true;
option java_package = "com.ran.kolibri.model.idp";

message SignUpRequest {
    string username = 1;
    string password = 2;
}

message SignUpResponse {
    string access_token = 1;
    string refresh_token = 2;
    // todo: return different statuses
}
